@@ -77,6 +77,7 @@ export(abbreviateTimeLabels,
        cnvName2oceName,
        coastlineBest,
        colormap,
+       concatenate,
        coriolis,
        ctdAddColumn,
        ctdDecimate,
