@@ -1,4 +1,5 @@
 0.9-24
+- concatenate() added
 - read.woa() added
 - colormap() value has new item 'colfunction'
 
